src/App.scss
.App {
  width: 100vw;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  background: #fff;
}

.heading {
  letter-spacing: 2px;
  font-size: 3rem;
  text-transform: uppercase;
  margin: 40px 0;
  text-align: center;
  z-index: 1;

  @media (max-width: 880px) {
    .heading {
      margin: 15px 0;
      font-size: 2rem;
    }
  }
}

.input {
  display: flex;
  max-width: 1200px;
  width: 95%;
  position: relative;
  align-items: center;
  border: 2px solid rgb(119, 119, 119);
  border-radius: 5px;
  .input__box {
    width: 100%;
    border-radius: 2px;
    padding: 20px 30px;
    font-size: 1.5rem;
    border: none;

    border-radius: 5px;
    transition: box-shadow 0.25s ease-in-out;
    &:focus {
      box-shadow: 0 0 10px 1000px rgba(0, 0, 0, 0.8);
      outline: none;
      &.heading {
        color: white !important;
      }
    }
  }

  .input__submit {
    position: absolute;
    width: 50px;
    height: 50px;
    margin: 10px;
    border-radius: 50%;
    right: 0;
    border: none;
    font-size: 0.95rem;
    background: black;
    color: white;
    transition: all 0.25s linear;
    box-shadow: 0 0 6px black;
    &:hover {
      cursor: pointer;
      background: rgb(46, 46, 46);
    }
    &:active {
      transform: scale(0.8);
      box-shadow: 0 0 2px black;
    }
  }
}

.container {
  display: flex;
  width: 95%;
  max-width: 1200px;
  justify-content: space-between;
  align-items: flex-start;
  margin-top: 60px;
  @media (max-width: 880px) {
    flex-direction: column;
  }
}

.todos {
  display: flex;
  flex-direction: column;
  padding: 15px;
  width: 47.5%;
  border-radius: 4px;
  background: rgb(233, 233, 233);
  transition: all 0.2s ease-in-out;
  @media (max-width: 880px) {
    width: 100%;
  }
  .todos__heading {
    font-size: clamp(1.2rem, 3vw, 2.5rem);
    color: #111;
    margin-bottom: 30px;
    font-weight: 500;
  }
}

.dragActive {
  background: rgb(54, 114, 182);
  .todos__heading {
    color: #fff;
  }
}

.remove {
  background: rgb(207, 207, 207);
  @media (max-width: 880px) {
    margin-top: 50px;
  }
}

.dragComplete {
  background: rgb(182, 63, 54);
  .todos__heading {
    color: #fff;
  }
}

.todo__single {
  display: flex;
  align-items: center;
  width: 100%;
  border-radius: 2px;
  padding: 20px;
  margin: 20px 0;
  background: #fff;
  transition: all 0.25s ease-in-out;
  color: #111;
  &:hover {
    transform: translateY(-2px);
    box-shadow: 0 5px 10px -5px rgba(24, 24, 24, 0.733);
  }
  @media (max-width: 880px) {
    width: 100%;
    padding: 15px;
  }
}

.dragActive {
  box-shadow: 0 5px 20px 0px rgba(24, 24, 24, 0.733);
  border: 2px solid rgb(139, 139, 139);
}

.todo__single__text {
  flex: 1;
  padding: 5px;
  border: 0;
  font-size: 1.2rem;
}

.todo__single__input {
  flex: 1;
  padding: 5px;
  border: 3px solid rgb(27, 27, 27);
  border-radius: 2px;
  font-size: 1.1rem;
  width: 100%;
}

.icon {
  margin-left: 10px;
  font-size: 1.2rem;
  cursor: pointer;
  transition: all 0.25s ease-in-out;
  &:hover {
    opacity: 0.8;
    color: rgb(7, 7, 126);
  }
}

